--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.25.1"
   },
-  "homepage": "https://myusername.github.io/fast-company"
+  "homepage": "https://unclekoin.github.io/vmc-fast-company/"
 }
