--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,5 @@
 {
-  "apiEndPoint": "http://localhost:4000/api/v1/"
+  "apiEndPoint": "http://localhost:4000/api/v1/",
+  "apiEndpointFirebase": "https://fast-company-firebase-1359f-default-rtdb.europe-west1.firebasedatabase.app/",
+  "isFirebase": true
 }
